objects/AVP_RGM_Link__c.object
<CustomObject>
    <description>Added for AVP emails. BDC Communication Project</description>
    <fields>
        <fullName>AVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AVP_RGM_Link</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Controller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AVP_RGM_Link2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RGM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RGM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AVP_RGM_Link1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DASH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoffman Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Truck Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>AVP - RGM Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AVP__c</columns>
        <columns>RGM__c</columns>
        <columns>Region__c</columns>
        <columns>Controller__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ARL-{0000}</displayFormat>
        <label>AVP - RGM Link ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AVP - RGM Link</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>